--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-numpy
-qutip
-sympy
-jupyter  # For running the demo notebook
+numpy>=1.26.0
+qutip>=4.7.0
+sympy>=1.12
+matplotlib>=3.8.0
+jupyter>=1.0.0
+tqdm>=4.66.0
+scipy>=1.11.0
